# rCore

./: .gitignore  README.md
os/: Cargo.toml  Makefile  build.rs
os/src/: batch.rs  config.rs  console.rs  linker.ld  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/fs/: mailbox.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  memory.rs  mod.rs  process.rs  time.rs
os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  processor.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
