[package]
name = "os"
version = "0.1.0"
authors = ["richardlee <18626685+richardlee159@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv" }
buddy_system_allocator = "0.8"
bitflags = "1.2"
spin = "0.9"
xmas-elf = "0.8"
derive_more = "0.99"
